[package]
name = "mquictt"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1", features = ["serde"] }
flume = "0.10.9"
futures = "0.3.17"
mqttbytes = "0.6"
quinn = { version = "0.7.2", features = ["rustls"] }
rustls = "0.19"
rustls-pemfile = "0.2.1"
thiserror = "1.0.30"
slab = "0.4.5"
tokio = { version = "1.13", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
figment = { version = "0.10.6", features = ["json"] }
anyhow = "1"
