[package]
name = "mquictt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1", features = ["serde"] }
flume = "0.10.9"
futures = "0.3.17"
log = "0.4.0"
mqttbytes = "0.6"
pretty_env_logger = "0.4.0"
quinn = { version = "0.7.2", features = ["rustls"] }
rustls = "0.19"
rustls-pemfile = "0.2.1"
thiserror = "1.0.30"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
slab = "0.4.5"
tokio = { version = "1.13", features = ["rt", "rt-multi-thread", "macros"] }
