[package]
name = "mquictt-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
flume = "0.10.9"
futures = "0.3.18"
log = "0.4.14"
mqttbytes = "0.6.0"
paste = "1.0.6"
quinn = { version = "0.7.2", features = ["rustls"] }
rustls = "0.19"
rustls-pemfile = "0.2.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
sled = "0.34.7"
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = ["sync"] }
