[package]
name = "mquictt-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.1.0"
flume = "0.10.9"
futures = "0.3.18"
log = "0.4.14"
mqttbytes = "0.6.0"
quinn = { version = "0.7.2", features = ["rustls"] }
rustls = "0.19"
rustls-pemfile = "0.2.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
thiserror = "1.0.30"
