[package]
name = "mquictt-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
futures = "0.3.18"
log = "0.4.14"
mqttbytes = "0.6.0"
quinn = { version = "0.7.2", features = ["rustls"] }
sled = "0.34.7"
tokio = { version = "1.14.0", features = ["rt-multi-thread", "macros", "sync"] }

mquictt-core = { path = "../mquictt-core" }

[dev-dependencies]
pretty_env_logger = "0.4.0"
